<resources>
    <string name="app_name">OviBot</string>

    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_log_out">Logout</string>
    <string name="parent">Parent</string>
    <string name="kindergarten_teacher">Kindergarten Teacher</string>
    <string name="attendance_sheet">Attendance Sheet</string>
    <string name="menu">Menu</string>
    <string name="childrenUp">ChildrenUp</string>
    <string name="workers">Workers</string>
    <string name="kindergarten_teachers">Kindergarten Teachers</string>
    <string name="child">Child</string>
    <string name="FullName">Full Name</string>
    <string name="Behavior">Behavior</string>
    <string name="Morale">Morale</string>
    <string name="Presence">Presence</string>
    <string name="Child_Up">Child Up</string>
    <string name="Child_Show">Child Show</string>
    <string name="Date">Date</string>
    <string name="greeting" translatable="false">" %1$s"</string>

    <!-- Errors -->
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="children">ChildrenShow</string>

</resources>