<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.rft.pti.eke.ovibot.Szulo">


    <Button
        android:id="@+id/log_out_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/action_log_out" /><!--Logout-->

    <!--Kollegak-->

    <!--GyerekFeltölt-->

    <!--Étkezés-->

    <!--GyerekMegjelenit-->

    <Button
        android:text="@string/attendance_sheet"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:id="@+id/btn_jelenleti"

        android:layout_marginTop="20dp"

        android:layout_toLeftOf="@+id/log_out_button"
        android:layout_toStartOf="@+id/log_out_button" />

    <Button
        android:text="@string/menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_etkezes"
        android:onClick="etkezes"
        android:layout_below="@+id/btn_jelenleti"
        android:layout_alignLeft="@+id/btn_jelenleti"
        android:layout_alignStart="@+id/btn_jelenleti"
        android:layout_marginTop="61dp"
        android:layout_alignRight="@+id/btn_jelenleti"
        android:layout_alignEnd="@+id/btn_jelenleti" />

    <Button
        android:text="@string/children"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_gyerek_megjelenit"
        android:onClick="gyerekek"
        android:layout_below="@+id/btn_etkezes"
        android:layout_alignLeft="@+id/btn_etkezes"
        android:layout_alignStart="@+id/btn_etkezes"
        android:layout_marginTop="54dp"
        android:layout_alignRight="@+id/btn_etkezes"
        android:layout_alignEnd="@+id/btn_etkezes" />

    <Button
        android:text="@string/workers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_ovonok"
        android:onClick="ovonok"
        android:layout_below="@+id/btn_gyerek_megjelenit"
        android:layout_alignLeft="@+id/btn_gyerek_megjelenit"
        android:layout_alignStart="@+id/btn_gyerek_megjelenit"
        android:layout_marginTop="52dp"
        android:layout_toLeftOf="@+id/log_out_button"
        android:layout_toStartOf="@+id/log_out_button" /><!--Jelenleti-->
</RelativeLayout>
