<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".LoginActivity">


    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/email_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:ems="10"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/password_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/email_editText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/email_editText"
            android:layout_below="@+id/email_editText"
            android:ems="10"
            android:hint="@string/prompt_password"
            android:inputType="textPassword" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/parent"
            android:id="@+id/cb_szulo"
            android:layout_alignTop="@+id/cb_ovono"
            android:layout_marginTop="50dp"
            android:layout_alignRight="@+id/cb_ovono"
            android:layout_alignEnd="@+id/cb_ovono"
            android:layout_alignLeft="@+id/cb_ovono"
            android:layout_alignStart="@+id/cb_ovono"
            />

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_sign_in"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kindergarten_teacher"
            android:id="@+id/cb_ovono"
            android:layout_marginTop="23dp"
            android:layout_below="@+id/password_editText"
            android:layout_toLeftOf="@+id/sign_in_button"
            android:layout_toStartOf="@+id/sign_in_button" />
    </RelativeLayout>
</LinearLayout>
